- update spec
